--- a/Menu.html
+++ b/Menu.html
@@ -5,9 +5,47 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kantine-htl</title>
+    <style>
+        *{background-color: azure;}
+        li{
+            font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        }
+    </style>
 </head>
 <body>
-    <h1>HTL-wy Wochen Menüs </h1>   
+
+    <nav>
+        <a href="LogIn.html">Anmelden</a>
+
+    </nav>
+
+    <h1>Htlwy Wochen Menüs </h1>   
+    <h2>WochenMenü:</h2>
+    <h3>Montag:</h3>
+    <li>-Muffins: hell/dunkel</li>
+    <li>-SchnitzelSemmel</li>
+    <li>-Getränke: Cola,Fanta,Wasser</li>
+
+    <h3>Dienstag</h3>
+    <li>-Muffins: hell/dunkel</li>
+    <li>-Weckerl</li>
+    <li>-Getränke: Cola,Fanta,Wasser</li>
+
+    <h3>Mittwoch</h3>
+    <li>-Muffins: hell/dunkel</li>
+    <li>-Nudel Suppe</li>
+    <li>-Getränke: Cola,Fanta,Wasser</li>
+
+    <h3>Donnerstag</h3>
+    <li>-Muffins: hell/dunkel</li>
+    <li>-Nudeln</li>
+    <li>-Getränke: Cola,Fanta,Wasser</li>
+    
+    <h3>Freitag</h3>
+    <li>-Muffins: hell/dunkel</li>
+    <li>-Salat</li>
+    <li>-Getränke: Cola,Fanta,Wasser</li>
+
 </body>
 </html>
 
